# temps

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  check.sh  release-plz.toml
.github/workflows/: ci.yaml  ci.yml  release-temps-macros.yml  release-temps.yml  release.yml
examples/: chrono_example.rs  jiff_example.rs
lib/: Cargo.toml
lib/src/: interpreter.rs  lib.rs  parser.rs
lib/src/de/: de.time.pest  mod.rs
lib/src/grammars/: de.time.pest
macros/: Cargo.toml
macros/src/: lib.rs
src/: hhmmss.rs  lib.rs
temps/: CHANGELOG.md  Cargo.toml
temps-chrono/: CHANGELOG.md  Cargo.toml
temps-chrono/src/: lib.rs
temps-chrono/tests/: all_tests.rs
temps-core/: CHANGELOG.md  Cargo.toml
temps-core/src/: error.rs  lib.rs
temps-core/src/language/: english.rs  german.rs  mod.rs
temps-core/tests/: all_tests.rs
temps-jiff/: CHANGELOG.md  Cargo.toml
temps-jiff/src/: lib.rs
temps-jiff/tests/: all_tests.rs
temps-testhelpers/: CHANGELOG.md  Cargo.toml
temps-testhelpers/src/: chrono.rs  core.rs  jiff.rs  lib.rs
temps/src/: lib.rs
