[workspace]
members = ["temps", "temps-core", "temps-chrono", "temps-jiff", "temps-testhelpers"]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
authors = ["Stefan Ruzitschka <stefan@icepuma.dev>"]
repository = "https://github.com/korora-tech/temps"
license = "MIT OR Apache-2.0"
