[package]
name = "temps"
version = "0.0.11"
edition = "2021"
description = "temps is a library for working with time and dates in Rust"
authors = ["Stefan Ruzitschka <stefan@icepuma.dev>"]
repository = "https://github.com/icepuma/temps"
readme = "../README.md"
license = "WTFPL"

[dependencies]
temps-macros = { path = "../macros", version = "0" }
pest = "2"
pest_derive = "2"
thiserror = "1"
quote = "1"
syn = "1"

[dev-dependencies]
pretty_assertions = "1"
