[package]
name = "temps-macros"
version = "0.0.12"
edition = "2021"
description = "temps-macros"
authors = ["Stefan Ruzitschka <stefan@icepuma.dev>"]
repository = "https://github.com/icepuma/temps"
license = "WTFPL"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
