[package]
name = "temps-chrono"
version.workspace = true
edition.workspace = true
description = "Chrono integration for temps - time and date parsing library"
authors.workspace = true
repository.workspace = true
readme = "../README.md"
license.workspace = true

[dependencies]
temps-core = { path = "../temps-core", version = "2.0.2" }
chrono = "0.4.43"

[dev-dependencies]
mockall = "0.14.0"
temps-testhelpers = { path = "../temps-testhelpers", features = ["chrono"] }
