[package]
name = "temps-core"
version.workspace = true
edition.workspace = true
description = "Core functionality for temps - time and date parsing library"
authors.workspace = true
repository.workspace = true
readme = "../README.md"
license.workspace = true

[dependencies]
winnow = "0.7.14"
thiserror = "2.0.18"

[dev-dependencies]
mockall = "0.14.0"
temps-testhelpers = { path = "../temps-testhelpers" }
