[package]
name = "temps-jiff"
version.workspace = true
edition.workspace = true
description = "Jiff integration for temps - time and date parsing library"
authors.workspace = true
repository.workspace = true
readme = "../README.md"
license.workspace = true

[dependencies]
temps-core = { path = "../temps-core", version = "2.0.2" }
jiff = "0.2.16"

[dev-dependencies]
mockall = "0.14.0"
temps-testhelpers = { path = "../temps-testhelpers", features = ["jiff"] }
