[package]
name = "temps"
version.workspace = true
edition.workspace = true
description = "temps is a library for working with time and dates in Rust"
authors.workspace = true
repository.workspace = true
readme = "../README.md"
license.workspace = true

[features]
default = []
chrono = ["dep:temps-core", "dep:temps-chrono"]
jiff = ["dep:temps-core", "dep:temps-jiff"]

[dependencies]
temps-core = { path = "../temps-core", version = "1.0.0", optional = true }
temps-chrono = { path = "../temps-chrono", version = "1.0.0", optional = true }
temps-jiff = { path = "../temps-jiff", version = "1.0.0", optional = true }