[package]
name = "temps"
version.workspace = true
edition.workspace = true
description = "temps is a library for working with time and dates in Rust"
authors.workspace = true
repository.workspace = true
readme = "../README.md"
license.workspace = true

[features]
default = []
chrono = ["dep:temps-core", "dep:temps-chrono"]
jiff = ["dep:temps-core", "dep:temps-jiff"]

[[example]]
name = "chrono_example"
path = "../examples/chrono_example.rs"
required-features = ["chrono"]

[[example]]
name = "jiff_example"
path = "../examples/jiff_example.rs"
required-features = ["jiff"]

[dependencies]
temps-core = { path = "../temps-core", version = "2.0.1", optional = true }
temps-chrono = { path = "../temps-chrono", version = "2.0.1", optional = true }
temps-jiff = { path = "../temps-jiff", version = "2.0.1", optional = true }

[dev-dependencies]
chrono = "0.4.42"
jiff = "0.2.16"
